# FIREX

./: .gitignore  CLAUDE.md  FIREX.md  README.md  RESULTS.md  pyproject.toml
configs/: eastern-australia.yaml  grouped_sites.txt  pacific-northwest.yaml  regions.yaml  urban_sites.csv
docs/superpowers/plans/: 2026-04-28-firex-pnw-prototype.md
docs/superpowers/specs/: 2026-04-28-firex-pnw-prototype-design.md
firex/: __init__.py  anomaly.py  attribution.py  cache.py  global_plots.py  masks.py  plots.py  regions.py  regression.py  run_pnw.py
firex/loaders/: aeronet.py  ceres_ebaf.py  merra2_monthly.py  modis_monthly.py  qfed_monthly.py  site_sample.py  viirs_monthly.py
output/eastern-australia/reports/: results-skeleton.md
output/pacific-northwest/reports/: results-skeleton.md
scripts/: fetch_merra2_monthly.sh  fetch_modis_monthly.sh  fetch_qfed.sh  fetch_viirs_monthly.sh  regen_all_plots.py  regen_all_regions.py  regen_global_plots.py  region_map_stats.py  sync_presentation_plots.sh  sync_to_io.sh
tests/: conftest.py  test_anomaly.py  test_attribution.py  test_cache.py  test_loaders.py  test_masks.py  test_pipeline_smoke.py  test_plots.py  test_regions.py  test_regression.py
tests/fixtures/: aeronet_synth.nc  build_fixtures.py  ceres_ebaf_synth.nc  merra2_aer_synth.nc  merra2_slv_synth.nc  modis_aqua_synth.nc  modis_terra_synth.nc  viirs_noaa20_synth.nc  viirs_snpp_synth.nc
